--- a/public/index.html
+++ b/public/index.html
@@ -195,8 +195,8 @@
             <a class="button" href="posts/tech" rel="noopener" title="Tech">
                 <span class="button-inner">Tech</span>
             </a>
-            <a class="button" href="posts/read" rel="noopener" title="Read">
-                <span class="button-inner">Read</span>
+            <a class="button" href="posts/insight" rel="noopener" title="Insight">
+                <span class="button-inner">Insight</span>
             </a>
             <a class="button" href="posts/life" rel="noopener" title="Life">
                 <span class="button-inner">Life</span>
