--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,18 @@
 <title>IntP Blog</title>
 
 <meta name="description" content="">
-<meta name="author" content="yjlintp">
-<link rel="canonical" href="https://intpyjl.github.io/yjlblog/">
+<meta name="author" content="Inco">
+<link rel="canonical" href="https://inco-yjl.github.io/yjlblog/">
 <link crossorigin="anonymous" href="/yjlblog/assets/css/stylesheet.min.e5613a864a3e5c99c6df40c4da152c7e1a166b761e463892af2c6a247d41348b.css" integrity="sha256-5WE6hko&#43;XJnG30DE2hUsfhoWa3YeRjiSryxqJH1BNIs=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://intpyjl.github.io/yjlblog/img/int.png">
-<link rel="icon" type="image/png" sizes="16x16" href="https://intpyjl.github.io/yjlblog/img/int.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://intpyjl.github.io/yjlblog/img/int.png">
-<link rel="apple-touch-icon" href="https://intpyjl.github.io/yjlblog/img/int.png">
-<link rel="mask-icon" href="https://intpyjl.github.io/yjlblog/img/int.png">
+<link rel="icon" href="https://inco-yjl.github.io/yjlblog/img/int.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://inco-yjl.github.io/yjlblog/img/int.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://inco-yjl.github.io/yjlblog/img/int.png">
+<link rel="apple-touch-icon" href="https://inco-yjl.github.io/yjlblog/img/int.png">
+<link rel="mask-icon" href="https://inco-yjl.github.io/yjlblog/img/int.png">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://intpyjl.github.io/yjlblog/index.xml">
-<link rel="alternate" type="application/json" href="https://intpyjl.github.io/yjlblog/index.json">
+<link rel="alternate" type="application/rss+xml" href="https://inco-yjl.github.io/yjlblog/index.xml">
+<link rel="alternate" type="application/json" href="https://inco-yjl.github.io/yjlblog/index.json">
 <noscript>
     <style>
         #theme-toggle,
@@ -60,7 +60,7 @@
 </noscript><meta property="og:title" content="IntP Blog" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://intpyjl.github.io/yjlblog/" />
+<meta property="og:url" content="https://inco-yjl.github.io/yjlblog/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="IntP Blog"/>
@@ -71,11 +71,11 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "IntP Blog",
-  "url": "https://intpyjl.github.io/yjlblog/",
+  "url": "https://inco-yjl.github.io/yjlblog/",
   "description": "",
-  "thumbnailUrl": "https://intpyjl.github.io/yjlblog/img/int.png",
+  "thumbnailUrl": "https://inco-yjl.github.io/yjlblog/img/int.png",
   "sameAs": [
-      "https://www.youtube.com/channel/UCnRQYHTnRLSF0cLJwMnedCg", "https://github.com/intpyjl", "yjl.intp@gmail.com"
+      "https://www.youtube.com/channel/UCnRQYHTnRLSF0cLJwMnedCg", "https://github.com/inco-yjl", "yjl.intp@gmail.com"
   ]
 }
 </script>
@@ -96,7 +96,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://intpyjl.github.io/yjlblog/" accesskey="h" title="IntP Blog (Alt + H)">IntP Blog</a>
+            <a href="https://inco-yjl.github.io/yjlblog/" accesskey="h" title="IntP Blog (Alt + H)">IntP Blog</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -122,37 +122,37 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://intpyjl.github.io/yjlblog/" title="主页">
+                <a href="https://inco-yjl.github.io/yjlblog/" title="主页">
                     <span class="active">主页</span>
                 </a>
             </li>
             <li>
-                <a href="https://intpyjl.github.io/yjlblog/search" title="搜索 (Alt &#43; /)" accesskey=/>
+                <a href="https://inco-yjl.github.io/yjlblog/search" title="搜索 (Alt &#43; /)" accesskey=/>
                     <span>搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://intpyjl.github.io/yjlblog/posts" title="文章">
+                <a href="https://inco-yjl.github.io/yjlblog/posts" title="文章">
                     <span>文章</span>
                 </a>
             </li>
             <li>
-                <a href="https://intpyjl.github.io/yjlblog/archives/" title="时间轴">
+                <a href="https://inco-yjl.github.io/yjlblog/archives/" title="时间轴">
                     <span>时间轴</span>
                 </a>
             </li>
             <li>
-                <a href="https://intpyjl.github.io/yjlblog/tags" title="标签">
+                <a href="https://inco-yjl.github.io/yjlblog/tags" title="标签">
                     <span>标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://intpyjl.github.io/yjlblog/about" title="关于">
+                <a href="https://inco-yjl.github.io/yjlblog/about" title="关于">
                     <span>关于</span>
                 </a>
             </li>
             <li>
-                <a href="https://intpyjl.github.io/yjlblog/links" title="是什么呢">
+                <a href="https://inco-yjl.github.io/yjlblog/links" title="是什么呢">
                     <span>是什么呢</span>
                 </a>
             </li>
@@ -161,7 +161,7 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img src="https://intpyjl.github.io/yjlblog/img/int.png" alt="profile image"
+        <img src="https://inco-yjl.github.io/yjlblog/img/int.png" alt="profile image"
             height="150" width="150" />
         <h1>这个人很懒，什么也没留下</h1>
         <span></br>……你怎么还不走</br>👇给我主播点个关注</span><div class="social-icons">
@@ -174,7 +174,7 @@
     <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
 </svg>
     </a>
-    <a href="https://github.com/intpyjl" target="_blank" rel="noopener noreferrer me" title="Github">
+    <a href="https://github.com/inco-yjl" target="_blank" rel="noopener noreferrer me" title="Github">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
     stroke-linecap="round" stroke-linejoin="round">
     <path
@@ -208,13 +208,13 @@
     
 <footer class="footer">
     <script src="https://utteranc.es/client.js"
-    repo="intpyjl/yjlIntP.github.io"
+    repo="inco-yjl/inco-yjl.github.io"
     issue-term="title"
     theme="github-light"
     crossorigin="anonymous"
     async>
 </script>
-    <span>yjlintp</span>
+    <span>Inco</span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
